{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 38,
  "lineage": "6183158b-a4dc-c9a1-0141-2eb039a0161f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d03ce209db75523",
            "arn": "arn:aws:ec2:us-west-1:966060878426:instance/i-01e94beddd52deee3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e94beddd52deee3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010eb1e993ab117c3",
            "private_dns": "ip-10-0-1-57.us-west-1.compute.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-54-151-10-79.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.10.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b0a1ea7e3a62e190",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081cb93aae319ec9b",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "shankar-instance",
              "Owner": "shankar"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "shankar-instance",
              "Owner": "shankar"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c8feeebaf448f72"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:966060878426:internet-gateway/igw-0bb43b41cdf39c184",
            "id": "igw-0bb43b41cdf39c184",
            "owner_id": "966060878426",
            "tags": {
              "Name": "shankar-igw",
              "Owner": "shankar"
            },
            "tags_all": {
              "Name": "shankar-igw",
              "Owner": "shankar"
            },
            "vpc_id": "vpc-0479a998c719220d0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:966060878426:route-table/rtb-0261b7dd3bbfd72e6",
            "id": "rtb-0261b7dd3bbfd72e6",
            "owner_id": "966060878426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb43b41cdf39c184",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shankar-rt",
              "Owner": "shankar"
            },
            "tags_all": {
              "Name": "shankar-rt",
              "Owner": "shankar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479a998c719220d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ebcf49435363400",
            "route_table_id": "rtb-0261b7dd3bbfd72e6",
            "subnet_id": "subnet-081cb93aae319ec9b"
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:966060878426:security-group/sg-07c8feeebaf448f72",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c8feeebaf448f72",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.5.4.207/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "24.5.4.207/32"
                ],
                "description": "My public IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "shankar-sg",
            "name_prefix": "",
            "owner_id": "966060878426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "{var.owner}-sg",
              "Owner": "shankar"
            },
            "tags_all": {
              "Name": "{var.owner}-sg",
              "Owner": "shankar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479a998c719220d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:966060878426:subnet/subnet-081cb93aae319ec9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081cb93aae319ec9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "966060878426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shankar-subnet",
              "Owner": "shankar"
            },
            "tags_all": {
              "Name": "shankar-subnet",
              "Owner": "shankar"
            },
            "vpc_id": "vpc-0479a998c719220d0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:966060878426:vpc/vpc-0479a998c719220d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ddd62f1981ba000",
            "default_route_table_id": "rtb-05a6fdaa0e46d360f",
            "default_security_group_id": "sg-0220c103e6dda1d52",
            "dhcp_options_id": "dopt-0e4299cc5dcc84f9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0479a998c719220d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a6fdaa0e46d360f",
            "owner_id": "966060878426",
            "tags": {
              "Name": "shankar-vpc",
              "Owner": "shankar"
            },
            "tags_all": {
              "Name": "shankar-vpc",
              "Owner": "shankar"
            }
          }
        }
      ]
    }
  ]
}